<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity"
    android:background="@color/homeColor">

    <android.support.v7.widget.Toolbar
        android:id="@+id/info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:background="@color/homeColor"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="10dp"/>
    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/ss_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ss"
        android:layout_below="@id/info_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:elevation="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ss_developers_india"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:id="@+id/ss_name"
        android:layout_below="@id/ss_image"
        android:layout_centerHorizontal="true"
        android:padding="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_cafe"
        android:layout_below="@id/ss_name"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        android:textSize="17sp"
        android:padding="20dp"
        android:textAlignment="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="#60000000">

        <TextView
            android:id="@+id/privacy_policy_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:padding="10dp"
            android:text="@string/privacy_policy"
            android:textColor="@drawable/text_click_selector"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:textColor="@drawable/text_click_selector"
            android:textSize="20sp"
            android:id="@+id/contact_us"
            android:padding="10dp"
            android:layout_above="@id/privacy_policy_link"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/info_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:textColor="@drawable/text_click_selector"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_above="@id/contact_us"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</RelativeLayout>