<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity"
    android:background="@color/homeColor">

    <android.support.v7.widget.Toolbar
        android:id="@+id/quiz_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:background="@color/homeColor"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="10dp"/>
    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <TextView
        android:id="@+id/quiz_question"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="10dp"
        android:text="@string/question"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_below="@id/quiz_toolbar"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/text_view_rounded"
        android:elevation="10dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/quiz_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/previous"
        android:layout_margin="25dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/quiz_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="25dp"
        android:src="@drawable/next"/>

    <RadioGroup
        android:id="@+id/quiz_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quiz_question"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option1"
            android:button="@null"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:padding="15dp"
            android:textSize="24sp"
            android:background="@drawable/radio_button_selector"
            android:textColor="#ffffff"
            android:id="@+id/quiz_option1"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/option2"
            android:textAlignment="center"
            android:textSize="24sp"
            android:padding="15dp"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:background="@drawable/radio_button_selector"
            android:id="@+id/quiz_option2"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option3"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:button="@null"
            android:padding="15dp"
            android:background="@drawable/radio_button_selector"
            android:textColor="#ffffff"
            android:id="@+id/quiz_option3"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option4"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:textSize="24sp"
            android:button="@null"
            android:background="@drawable/radio_button_selector"
            android:padding="15dp"
            android:id="@+id/quiz_option4"/>
    </RadioGroup>
    <ProgressBar
        android:id="@+id/quiz_pbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/video_player"
        android:layout_below="@id/quiz_question"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:background="@color/homeColor"
        android:id="@+id/replay"/>



</RelativeLayout>